--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "eslint": "^8.39.0",
+    "file-saver": "^2.0.5",
     "firebase": "^9.21.0",
+    "html2pdf": "^0.0.11",
+    "html2pdf.js": "^0.10.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
